--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@madzadev/image-slider": "^1.0.9",
     "next": "12.3.1",
+    "next-images": "^1.8.4",
+    "next-transpile-modules": "^10.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-multi-carousel": "^2.8.2"
+    "react-multi-carousel": "^2.8.2",
+    "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
     "eslint": "8.26.0",
